# sort-mediafiles-by-date

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  main.go
cmd/sort-media/: CMakeLists.txt  README.md  main.go
gui/sort-media-gui/: CMakeLists.txt  ProjectVersion.cmake  main.cpp  mainwindow.cpp  mainwindow.h
